2003-01-07  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-thumbnail.c:
	Move thumbnail config to gconf.

2003-01-06  Arvind Samptur <arvind.samptur@wipro.com>
	* libgnomeui/gnome-icon-entry.c:
	(gnome_icon_entry_instance_init) Don't set the modality
	for file entry. 

2002-12-24  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* libgnomeui/gnome-app.c (gnome_app_class_init): Make app_id a
	construct time property as well. Fixes problem exhibited when using
	toolbars.

2002-12-19  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-theme.c (load_themes):
	Always load icons from the "gnome" theme.

2002-12-16  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.5

2002-12-09  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.4

2002-12-06  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-theme.c:
	The fallback theme is called "hicolor" in the latest spec.

2002-12-02  Glynn Foster  <glynn.foster@sun.com>

	* libgnomeui/gnome-href.c: (gnome_href_clicked): Update for a nicer
	string. Should fix #99907.

2002-11-28  Glynn Foster  <glynn.foster@sun.com>

	* libgnomeui/gnome-href.c: (gnome_href_clicked): Change reference
	of Control Center to Preferred Applications.

2002-11-27  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.3

	* libgnomeui/gnome-stock-icons.h: Include gtkstock.h.
	#97429, reported by Ettore Perazzoli.

2002-11-23  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* configure.in: Fix gtk-doc version detection.

2002-11-22  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* libgnomeui/gnome-font-picker.c:
	(gnome_font_picker_label_use_font_in_label): Modify only the font style
	without changing other style properties. Fixes Bug#93214.

2002-11-19  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-vfs-util.c (gnome_gdk_pixbuf_new_from_uri):
	Always close loader when done. Correctly handle EOF.

2002-11-10  Ole Laursen  <olau@hardworking.dk>
